<resources>
    <string name="month">महीना</string>
    <string name="year">वर्ष</string>
    <string name="facebook_app_id" translatable="false">420301738432360</string>
    <string name="fb_bank_balance_menu_medium_rectangle" translatable="false">420301738432360_612507172545148</string>
    <string name="fb_activity_main_menu_native_banner_feed" translatable="false">420301738432360_619745621821303</string>
    <string name="am_bank_balance_menu_medium_rectangle" translatable="false">ca-app-pub-3940256099942544/6300978111</string>
    <string name="google_app_ad_id" translatable="false">ca-app-pub-3940256099942544~3347511713</string>
    <string name="interstitial_full_screen" translatable="false">ca-app-pub-3940256099942544/1033173712</string>
    <string name="interstitial_tool" translatable="false">ca-app-pub-3940256099942544/1033173712</string>
    <string name="add_unit_id" translatable="false">ca-app-pub-3940256099942544/6300978111</string>
    <string name="app_name">Bank Babu</string>
    <string name="string">किसी भी बैंक खाते की शेष राशि जानें, नेट बैंकिंग की सुविधा प्राप्त करें, और आस-पास के बैंक एटीएम की शाखाओं के बारे में पता करें।</string>
    <string name="menu_rate_app">रेट</string>
    <string name="menu_share">शेयर</string>
    <string name="rate_ask">यह ऐप पसंद है? क्या आप हमें 5 स्टार देना चाहते हैं?</string>
    <string name="share_ask">आपको एप्प उपयोगी लगा हो तो, दोस्तो से शेयर जरुर करे। जय हिं</string>
    <string name="share">\n1. किसी भी बेन्क के खाते का बेलेन्स जाने\n2. नेट बेकिंग की सुविधा पाये\n3. नजदीकी बेन्क के शाखा वं ATM की जानकारी पाये।\n</string>
    <string name="saturday">सभी बैंक हर रविवार के बाद महीने के दूसरे (2) और चौथे (4) को बंद होते हैं।</string>
    <string name="internet_exit">इंटरनेट बैंकिंग के लिए आपको इस ऐप से बाहर निकलना होगा।</string>
    <string name="spinner_repeat">प्रत्येक दोहराएं चुनें</string>
    <string name="spinner_notification">अधिसूचना का चयन करें</string>
    <string name="dialog_ok">ठीक है</string>
    <string name="internet_check">कृपया अपनी इंटरनेट कनेक्टिविटी की जाँच करें</string>
    <string name="internet">कोई इंटरनेट कनेक्शन नहीं</string>
    <string name="call_msg">क्या आप वाकई कॉल करना चाहते हैं?</string>
    <string name="call">कॉल करें</string>
    <string name="next">अगला</string>
    <string name="skip">छोड़ें</string>
    <string name="bill_reminder_descriptions">आपने अब तक कोई रिमाइंडर ऐड नहीं किया।</string>
    <string name="bill_reminder_paid_descriptions">विवरण</string>
    <string name="paymentMethod">मैं आपको भुगतान भेजना चाहता हूं, मुझे अपनी भुगतान विधि भेजें</string>
    <string name="usd">INR</string>
    <string name="sharePayable">मैं आपको निम्नलिखित राशि का भुगतान करना चाहता हूं, कृपया अपना भुगतान विवरण भेजें। \n</string>
    <string name="shareReceive">आपका भुगतान बकाया है, कृपया जल्द से जल्द भुगतान करें! धन्यवाद! \n</string>
    <string name="shareAccount">यहाँ मेरा खाता विवरण है, कृपया इस खाते पर भुगतान करें</string>
    <string name="err_msg_ifsc">मान्य IFSC कोड दर्ज करें</string>
    <string name="err_msg_Account">खाता संख्या मेल नहीं खाता!</string>
    <string name="err_msg_number">मान्य संपर्क फ़ोन नंबर दर्ज करें</string>
    <string name="no_browser_install">इस उपकरण में कोई समर्थित ब्राउज़र नहीं है। कृपया एक ब्राउज़र स्थापित करें।</string>
    <string name="title_share">शेयर</string>
    <string name="title_sip_amount">SIP राशि</string>
    <string name="title_investment_period">निवेश की अवधि</string>
    <string name="title_expected_annual_return" formatted="false">अपेक्षित वार्षिक रिटर्न दर (%)</string>
    <string name="emi_calculator">EMI कैलकुलेटर</string>
    <string name="gst_calculator">GST कैलकुलेटर</string>
    <string name="sip_calculator">SIP कैलकुलेटर</string>
    <string name="pf_status">PF स्थिति</string>
    <string name="content_description_tools_icon">उपकरण आइकन</string>
    <string name="content_description_period">निवेश की अवधि</string>
    <string name="content_description_sip_amount">SIP राशि</string>
    <string name="content_description_expected_annual_return">अपेक्षित वार्षिक रिपोर्ट</string>
    <string name="nearest_atm">नजदीकी ATM</string>
    <string name="nearest_bank">नजदीकी बैंक</string>
    <string name="payment_method">भुगतान का तरीका</string>
    <string name="payment_reminder">भुगतान रिमाईन्डर</string>
    <string name="text_reset">रीसेट</string>
    <string name="text_loan_amount">ऋण की राशि</string>
    <string name="text_monthly_emi">EMI</string>
    <string name="text_total_interest">CGST</string>
    <string name="text_total_payment">SGST</string>
    <string name="text_total_calculation">कुल गणना</string>
    <string name="text_amount_gst">कुल गणना</string>
    <string name="text_period">अवधि</string>
    <string name="text_interest_rate">ब्याज दर</string>
    <string name="text_month">&#160;महीना</string>
    <string name="text_initial_amount">शुरुआती रकम</string>
    <string name="text_gst_rate">gst दर</string>
    <string name="total_gst">रकम</string>
    <string name="text_cgst">CGST</string>
    <string name="text_sgst">SGST</string>
    <string name="text_add_gst">Gst जोड़ें</string>
    <string name="text_remove_gst">Gst निकालें</string>
    <string name="text_calculate">गणना</string>
    <string name="text_sms">sms</string>
    <string name="text_call">कॉल</string>
    <string name="text_go_to_login">लॉगइन पर जाएं</string>
    <string name="text_maturity_amount">परिपक्वता \n राशि</string>
    <string name="text_investment_period">निवेश \n अवधि</string>
    <string name="text_investment_period_result">निवेश की अवधि</string>
    <string name="text_sip_amount">SIP \ nराशि</string>
    <string name="text_calculate_maturity_amount">परिपक्वता राशि की गणना करें</string>
    <string name="text_calculate_sip_amount">SIP राशि की गणना करें</string>
    <string name="text_calculate_investment_period">निवेश की अवधि की गणना करें</string>
    <string name="text_maturity_amount_result">परिपक्वता राशि</string>
    <string name="text_months">महीने</string>
    <string name="text_years">वर्षों</string>
    <string name="gst_rate_six" formatted="false">6%</string>
    <string name="gst_rate_twelve" formatted="false">12%</string>
    <string name="gst_rate_eighteen" formatted="false">18%</string>
    <string name="gst_rate_twenty_eight" formatted="false">28%</string>
    <string name="error_initial_amount_is_empty">प्रारंभिक राशि खाली है</string>
    <string name="error_sip_amount_is_empty">SIP राशि खाली है</string>
    <string name="error_investment_period_is_empty">निवेश की अवधि खाली है</string>
    <string name="error_expected_annual_return_rate_is_empty">अपेक्षित वार्षिक रिटर्न दर खाली है</string>
    <string name="hint_enter_amount">राशी डालें</string>
    <string name="hint_enter_period">अवधि दर्ज करें</string>
    <string name="hint_expected_annual_return">वार्षिक रिटर्न दर्ज करें</string>
    <string name="error_maturity_amount_is_empty">परिपक्वता राशि खाली है</string>
    <string name="text_sip_amount_result">SIP राशि</string>
    <string name="error_no_sms_app_where_found">फोन में कोई मैसेजिंग एप्लिकेशन नहीं है</string>
    <string name="text_interest" formatted="false">ब्याज %</string>
    <string name="tools">बैंकिंग उपकरण</string>
    <string name="select_state">राज्य चुनें</string>
    <string name="bank_balance">बैंक राशि</string>
    <string name="mini_statement">मिनी स्टेटमेंट</string>
    <string name="mini_statement_default">123456889</string>
    <string name="customer_care">ग्राहक सेवा</string>
    <string name="text">टेक्स्ट</string>
    <string name="ussd_banking">USSD बैंकिंग</string>
    <string name="sms_banking">SMS बैंकिंग</string>
    <string name="internet_banking">इंटरनेट बैंकिंग</string>
    <string name="your_phone_number_should_be_registered">आपका फोन नंबर बैंक के पास पंजीकृत होना चाहिए।</string>
    <string name="bookmark_bank">बुकमार्क बैंक</string>
    <string name="search_your_bank">आपका बैंक खोजें</string>
    <string name="send_sms">SMS भेजो</string>
    <string name="hello">नमस्ते</string>
    <string name="send">भेजो</string>
    <string name="setup_language_and_link_bank">सेटअप भाषा और लिंक बैंक</string>
    <string name="if_using_first_time_dial_99_to_setup_language_amp_your_bank_account">
		&lt;![CDATA]
	अपने बैंक खातेऔर भाषा सेटअप करने के लिए पहली बार डायल करें * 99 #</string>
    <string name="dial_99">* 99 # डायल करें</string>
    <string name="already_setup">यह पहले ही सेटअप हो चुका है</string>
    <string name="send_money">पैसे भेजो</string>
    <string name="receive_money">पैसे प्राप्त करें</string>
    <string name="check_balance">बकाया जाँचो</string>
    <string name="my_profile">मेरी प्रोफाइल</string>
    <string name="upi_pin">UPI पिन</string>
    <string name="pending_requests">अनुरोध लंबित</string>
    <string name="transaction">लेन-देन</string>
    <string name="account_name">खाते का नाम</string>
    <string name="saving">बचत</string>
    <string name="default_number">123456789</string>
    <string name="add_bill">बिल जोड़ें</string>
    <string name="currency">मुद्रा</string>
    <string name="inr">INR(₹)</string>
    <string name="amount">रकम</string>
    <string name="enter_here">यहाँ दर्ज करें ..</string>
    <string name="select_category">श्रेणी का चयन करें</string>
    <string name="payee_item">आदाता / मद</string>
    <string name="notes">टिप्पणियाँ</string>
    <string name="due_date">नियत तारीख</string>
    <string name="payable">देय</string>
    <string name="receivable">प्राप्य</string>
    <string name="not_repeat">रिपीट नहीं</string>
    <string name="repeats">पुनर्प्रसारण</string>
    <string name="repeats_every">दोहराए हर</string>
    <string name="custom_due_date">कस्टम देय तिथि</string>
    <string name="default_repeat_day">1</string>
    <string name="next_due_date">अगला देय तिथि</string>
    <string name="send_daily_reminder_notification">दैनिक अनुस्मारक अधिसूचना भेजें</string>
    <string name="cancel">रद्द करें</string>
    <string name="save">सेव</string>
    <string name="add_payment_method">भुगतान विधि जोड़ें</string>
    <string name="hint_account_name">खाते का नाम *</string>
    <string name="hint_account_number">खाता संख्या *</string>
    <string name="hint_confirm_account_number">खाता संख्या की पुष्टि करें *</string>
    <string name="hint_isfc_code">IFSC कोड *</string>
    <string name="hint_bank_name">बैंक का नाम *</string>
    <string name="hint_contact_no">सहेजें</string>
    <string name="hint_notes">टिप्पणियाँ</string>
    <string name="a_c_type">खाते का प्रकार</string>
    <string name="submit">जमा करें</string>
    <string name="current">वर्तमान</string>
    <string name="cash_credit">कैश क्रेडिट</string>
    <string name="loan_account">ऋण खाता</string>
    <string name="account_details">खाता विवरण</string>
    <string name="text_share">शेयर</string>
    <string name="payment">भुगतान</string>
    <string name="add_your_account">अपना खाता जोड़ें</string>
    <string name="category">वर्ग</string>
    <string name="default_amount">100$</string>
    <string name="add_bank_details">बैंक विवरण जोड़ें</string>
    <string name="go_payment">भुगतान करे</string>
    <string name="hint_enter_category_name">श्रेणी का नाम दर्ज करें</string>
    <string name="search_category">श्रेणी खोजें</string>
    <string name="new_category">नई श्रेणी</string>
    <string name="edit_view_item">मद को संपादित करें / देखें</string>
    <string name="delete_item">चीज़ें हटाएं</string>
    <string name="mark_as_paid">अदा के रूप में चिह्नित करें</string>
    <string name="mark_as_unpaid">अवैतनिक के रूप में चिह्नित करें</string>
    <string name="paid_bill_not_available">भुगतान किया हुआ बिल उपलब्ध नहीं है</string>
    <string name="add_your_bill">अपना बिल जोड़ें</string>
    <string name="group_name">समूह का नाम</string>
    <string name="payee">आदाता</string>
    <string name="category_name">श्रेणी नाम</string>
    <string name="notes_detail">टिप्पणियाँ का विवरण</string>
    <string name="no">नहीं</string>
    <string name="add">Add</string>
</resources>