<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/whisper">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/ic_bank_balance_bg"
        android:orientation="vertical">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimary"
            android:fitsSystemWindows="true"
            android:theme="@style/ThemeOverlay.AppCompat.Dark" />

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:scrollbars="none">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="12dp"
                android:layout_marginEnd="12dp"
                android:layout_marginTop="10dp"
                android:orientation="vertical">

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColorHint="@color/fiord">

                    <EditText
                        android:id="@+id/edit_text_account_name"
                        android:layout_width="match_parent"
                        android:layout_height="35dp"
                        android:background="@drawable/circle_opp"
                        android:hint="@string/hint_account_name"
                        android:inputType="textPersonName"
                        android:padding="10dp"
                        android:textColor="@color/fiord"
                        android:textSize="14sp"
                        tools:ignore="Autofill" />
                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_marginTop="5dp"
                    android:layout_height="wrap_content"
                    android:textColorHint="@color/fiord">

                    <EditText
                        android:id="@+id/edit_text_account_number"
                        android:layout_width="match_parent"
                        android:layout_height="35dp"
                        android:background="@drawable/circle_opp"
                        android:hint="@string/hint_account_number"
                        android:inputType="numberDecimal"
                        android:padding="10dp"
                        android:textColor="@color/fiord"
                        android:textSize="14sp"
                        tools:ignore="Autofill" />
                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/text_input_layout_confirm_number"
                    android:layout_width="match_parent"
                    android:layout_marginTop="5dp"
                    android:layout_height="wrap_content"
                    android:textColorHint="@color/fiord">

                    <EditText
                        android:id="@+id/edit_text_confirm_number"
                        android:layout_width="match_parent"
                        android:layout_height="35dp"
                        android:background="@drawable/circle_opp"
                        android:hint="@string/hint_confirm_account_number"
                        android:inputType="numberDecimal"
                        android:padding="10dp"
                        android:textSize="14sp"
                        tools:ignore="Autofill" />
                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/text_input_layout_isfc"
                    android:layout_width="match_parent"
                    android:layout_marginTop="5dp"
                    android:layout_height="wrap_content"
                    android:textColorHint="@color/fiord">

                    <EditText
                        android:id="@+id/edit_text_isfc_code"
                        android:layout_width="match_parent"
                        android:layout_height="35dp"
                        android:background="@drawable/circle_opp"
                        android:hint="@string/hint_isfc_code"
                        android:inputType="text"
                        android:maxLength="11"
                        android:padding="10dp"
                        android:textColor="@color/fiord"
                        android:textSize="14sp"
                        tools:ignore="Autofill" />
                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:textColorHint="@color/fiord">

                    <EditText
                        android:id="@+id/edit_text_bank_name"
                        android:layout_width="match_parent"
                        android:layout_height="35dp"
                        android:background="@drawable/circle_opp"
                        android:hint="@string/hint_bank_name"
                        android:inputType="text"
                        android:padding="10dp"
                        android:textColor="@color/fiord"
                        android:textSize="14sp"
                        tools:ignore="Autofill" />
                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/input_layout_number"
                    android:layout_width="match_parent"
                    android:layout_marginTop="5dp"
                    android:layout_height="wrap_content"
                    android:textColorHint="@color/fiord">

                    <EditText
                        android:id="@+id/edit_text_contact_no"
                        android:layout_width="match_parent"
                        android:layout_height="35dp"
                        android:background="@drawable/circle_opp"
                        android:hint="@string/hint_contact_no"
                        android:inputType="numberDecimal"
                        android:maxLength="10"
                        android:padding="10dp"
                        android:textColor="@color/fiord"
                        android:textSize="14sp"
                        tools:ignore="Autofill" />
                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:textColorHint="@color/fiord">

                    <EditText
                        android:id="@+id/edit_text_note"
                        android:layout_width="match_parent"
                        android:layout_height="35dp"
                        android:background="@drawable/circle_opp"
                        android:hint="@string/hint_notes"
                        android:inputType="text"
                        android:padding="10dp"
                        android:textColor="@color/fiord"
                        android:textSize="14sp"
                        tools:ignore="Autofill" />
                </android.support.design.widget.TextInputLayout>

                <View
                    android:id="@+id/divider"
                    android:layout_width="match_parent"
                    android:layout_marginStart="12dp"
                    android:layout_marginEnd="12dp"
                    android:layout_height="1dp"
                    android:alpha="0.3"
                    android:layout_marginTop="20dp"
                    android:layout_marginBottom="20dp"
                    android:background="@color/fiord" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:fontFamily="@font/helvetica_bold"
                    android:paddingStart="5dp"
                    android:paddingEnd="5dp"
                    android:text="@string/a_c_type"
                    android:textColor="@color/fiord"
                    android:textSize="15sp" />

                <RadioGroup
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp"
                    android:layout_marginEnd="5dp"
                    android:orientation="vertical"
                    android:paddingStart="10dp"
                    android:paddingEnd="10dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <android.support.v7.widget.AppCompatRadioButton
                            android:id="@+id/radio_button_current"
                            style="@style/ClickableWrapper"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:layout_marginTop="10dp"
                            android:checked="true"
                            android:text="@string/current"
                            android:textColor="@color/fiord" />

                        <android.support.v7.widget.AppCompatRadioButton
                            android:id="@+id/radio_button_saving"
                            style="@style/ClickableWrapper"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="10dp"
                            android:layout_weight="1"
                            android:text="@string/saving"
                            android:textColor="@color/fiord" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <android.support.v7.widget.AppCompatRadioButton
                            android:id="@+id/radio_button_credit"
                            style="@style/ClickableWrapper"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:text="@string/cash_credit"
                            android:textColor="@color/fiord" />

                        <android.support.v7.widget.AppCompatRadioButton
                            android:id="@+id/radio_button_loan"
                            style="@style/ClickableWrapper"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:text="@string/loan_account"
                            android:textColor="@color/fiord" />
                    </LinearLayout>
                </RadioGroup>


                <Button
                    android:id="@+id/button_submit"
                    style="@style/ClickableWrapper"
                    android:layout_width="175dp"
                    android:layout_height="45dp"
                    android:layout_gravity="center"
                    android:layout_marginStart="24dp"
                    android:layout_marginEnd="24dp"
                    android:layout_marginBottom="24dp"
                    android:layout_marginTop="20dp"
                    android:background="@drawable/toggle_button_sip_background"
                    android:tag="SAVE"
                    android:text="@string/add"
                    android:textColor="@android:color/white" />
            </LinearLayout>
        </ScrollView>
    </LinearLayout>
</FrameLayout>