<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
  xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:tools="http://schemas.android.com/tools"
  android:layout_width="match_parent"
  android:layout_height="wrap_content"
  android:orientation="vertical">

  <LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <ImageView
      android:id="@+id/image_view_new_category"
      android:layout_width="60dp"
      android:layout_height="60dp"
      android:padding="5dp"
      android:src="@drawable/ic_category_other"
      tools:ignore="ContentDescription"/>

    <EditText
      android:id="@+id/edit_text_new_category"
      android:layout_width="match_parent"
      android:layout_height="match_parent"
      android:layout_margin="10dp"
      android:layout_gravity="center"
      android:background="#ffffff"
      android:hint="@string/hint_enter_category_name"
      android:imeOptions="actionDone"
      android:inputType="textAutoComplete"
      android:textSize="15sp"
      tools:ignore="Autofill"/>

  </LinearLayout>

  <android.support.v7.widget.RecyclerView
    android:id="@+id/recycler_view_categories"
    android:layout_width="match_parent"
    android:layout_height="0dp"
    android:layout_weight="1"
    android:scrollbars="none"/>

  <LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <Button
      android:id="@+id/button_cancel"
      style="@style/ClickableWrapper"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_weight="1"
      android:background="@color/colorPrimary"
      android:text="@string/cancel"
      android:textAllCaps="true"
      android:textColor="@android:color/white"
      tools:ignore="ButtonStyle"/>

    <Button
      android:id="@+id/button_save"
      style="@style/ClickableWrapper"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_weight="1"
      android:background="@color/colorPrimaryDark"
      android:text="@string/save"
      android:textAllCaps="true"
      android:textColor="@android:color/white"
      tools:ignore="ButtonStyle"/>
  </LinearLayout>
</LinearLayout>
